--- a/console/src/components/Services/EventTrigger/TableCommon/Table.scss
+++ b/console/src/components/Services/EventTrigger/TableCommon/Table.scss
@@ -312,4 +312,12 @@ a.expanded {
 .status_code_right {
   text-align: right;
   font-weight: bold;
+  font-size: 15px;
+  padding-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  i
+  {
+    margin-left: 5px;
+  }
 }
