update search match background color

--- a/docs/_static/hasura-custom.css
+++ b/docs/_static/hasura-custom.css
@@ -719,7 +719,7 @@ article ol ol {
 }
 
 #input_search_box .algolia-autocomplete .algolia-docsearch-suggestion--highlight {
-  background: #FEEFFE;
+  background: #FFF1DB;
 }
 
 /*** Algolia docsearch overrides END ***/
