--- a/console/src/components/Services/EventTrigger/TableCommon/Table.scss
+++ b/console/src/components/Services/EventTrigger/TableCommon/Table.scss
@@ -309,6 +309,13 @@ a.expanded {
   clear: both;
   margin: 0;
 }
+.triggerSettingsModifyButton {
+  margin-right: 10px;
+  border-radius: 3px;
+}
+.dropDownGroup {
+  max-width: 300px;
+}
 .status_code_right {
   text-align: right;
   font-weight: bold;
