Button focus fix

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -736,6 +736,7 @@ code
 .yellow_button:focus
 {
   outline: none;
+  background-color: #F2B130;
 }
 .default_button
 {
@@ -753,6 +754,7 @@ code
 .default_button:focus
 {
   outline: none;
+  background-color: #efefef;
 }
 .danger_button
 {
@@ -781,6 +783,10 @@ code
     background-color: #F2B130;
     color: #fff;
   }
+  &:focus
+  {
+    background-color: #F2B130;
+  }
 }
 .docsButton
 {
@@ -793,6 +799,10 @@ code
   padding: 5px 10px;
   line-height: 1.5;
   &:hover {
+    background-color: #efefef;
+  }
+  &:focus
+  {
     background-color: #efefef;
   }
 }
