send served_by and uuid from window.__env

--- a/console/src/components/Main/Main.scss
+++ b/console/src/components/Main/Main.scss
@@ -1116,3 +1116,10 @@
     border: 0;
   }
 }
+.telemetryNotification {
+  background-color: red;
+  padding: 10px;
+  position: fixed;
+  bottom: 50px;
+  right: 0px;
+}
