--- a/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
+++ b/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
@@ -56,6 +56,7 @@
 
 .ReactTable .rt-tbody {
   overflow-x: hidden !important;
+  min-width: fit-content !important;
 }
 
 .ReactTable .rt-thead [role='columnheader'] {
