--- a/console/src/components/Services/Data/TableCommon/Table.scss
+++ b/console/src/components/Services/Data/TableCommon/Table.scss
@@ -199,3 +199,8 @@ a.expanded {
   text-align: center;
   white-space: normal;
 }
+
+.sidebarMigration {
+  display: block !important;
+  clear: both !important;
+}
