--- a/console/src/components/Services/Layout/ReusableTextAreaWithCopy/style.scss
+++ b/console/src/components/Services/Layout/ReusableTextAreaWithCopy/style.scss
@@ -38,6 +38,10 @@
   background: none;
 }
 
+.codeBlock .formattedCode {
+  padding: 0px 0px !important;
+}
+
 .copyGenerated
 {
   position: absolute;
