--- a/console/src/components/Services/Data/Function/Modify/ModifyCustomFunction.scss
+++ b/console/src/components/Services/Data/Function/Modify/ModifyCustomFunction.scss
@@ -3,8 +3,8 @@
 .modifyWrapper {
   .commonBtn
   {
-    padding: 20px 0;
-    padding-top: 40px;
+    // padding: 20px 0;
+    // padding-top: 40px;
     .delete_confirmation_error {
       margin-left: 15px;
       color: #d9534f;
@@ -17,9 +17,17 @@
       margin-right: 20px;
       color: #FFF;
     }
+    .white_button {
+      margin-right: 20px;
+      color: #333;
+      &:hover {
+        background-color: #d4d4d4;
+      }
+      border-color: #8c8c8c;
+    }
     a
     {
-      margin-left: 20px;
+      // margin-left: 20px;
     }
     .refresh_schema_btn {
       margin-left: 20px;
@@ -35,6 +43,6 @@
   }
   .sqlBlock {
     position: relative;
-    width: 80%;
+    width: 100%;
   }
 }
