--- a/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/src/components/styles.css
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/tutorial-site/src/components/styles.css
@@ -1,34 +1,33 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
-body
-{
+body {
   font-family: 'Roboto';
 }
-.navbar-default .navbar-toggle .icon-bar
-{
+
+.navbar-default .navbar-toggle .icon-bar {
   background-color: #fff !important;
 }
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover
-{
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
   background-color: #542683;
 }
-.headerWrapper
-{
+
+.headerWrapper {
   border-bottom: 1px solid rgb(212, 218, 223);
   box-shadow: rgba(116, 129, 141, 0.1) 0px 1px 1px 0px;
   display: flex;
   align-items: center;
 }
-.navBarCollapse
-{
+
+.navBarCollapse {
   flex: 1;
 }
-.logoWrapper
-{
+
+.logoWrapper {
   padding: 21px 0;
   padding-left: 20px;
 }
-.logoContent
-{
+
+.logoContent {
   font-family: 'Roboto';
   margin-left: 16px;
   font-size: 28px;
@@ -36,9 +35,9 @@ body
   font-weight: 500;
   padding-right: 10px;
 }
+
 /* Header section starts here */
-.navBarDefault
-{
+.navBarDefault {
   background-color: #372476;
   border-radius: 0;
   border-top: 0;
@@ -52,8 +51,8 @@ body
   -o-box-shadow: -1px 0px 4px 1px rgba(175,158,232,.4);
   z-index: 1;
 }
-.navBarBrand
-{
+
+.navBarBrand {
   height: auto;
   font-size: 28px;
   line-height: 1.5;
@@ -61,46 +60,47 @@ body
   color: #fff !important;
   padding: 20px;
 }
-.navBarBrand img
-{
+
+.navBarBrand img {
   width: 40px;
   margin-right: 16px;
   display: inline-block;
 }
-.navBarUl li a
-{
+
+.navBarUL li a {
   font-family: 'Roboto';
   color: #fff !important;
   font-size: 16px;
   font-weight: 500;
   line-height: 1em;
 }
-.mainWrapper
-{
+
+.mainWrapper {
   color: rgb(59, 69, 78);
   max-width: 750px;
 }
+
 pre {
   border: 0 !important;
   background-color: rgb(245, 247, 249) !important;
 }
-.mainWrapper ul, .mainWrapper ol
-{
+
+.mainWrapper ul, .mainWrapper ol {
   -webkit-padding-start: 40px;
   -moz-padding-start: 40px;
   -o-padding-start: 40px;
   margin: 24px 0px;
   padding: 0px 0px 0px 2em;
 }
-.mainWrapper ul li, .mainWrapper ol li
-{
+
+.mainWrapper ul li, .mainWrapper ol li {
   font-size: 16px;
   line-height: 1.8;
   font-weight: 400;
 }
+
 /* Header section ends here */
-.headerNav
-{
+.headerNav {
   font-family: 'Roboto';
   padding: 0px 24px;
   color: rgb(116, 76, 188);
@@ -108,30 +108,30 @@ pre {
   font-weight: 500;
   line-height: 1em;
 }
-.headerNav a
-{
+
+.headerNav a {
   color: rgb(116, 76, 188);
   text-decoration: none;
 }
-.headerNav a:hover
-{
+
+.headerNav a:hover {
   text-decoration: none;
 }
-.logoWrapper img
-{
+
+.logoWrapper img {
   width: 40px;
 }
-.sideBarUl
-{
+
+.sideBarUL {
   margin-top: 32px;
 }
-.sideBarUl li
-{
+
+.sideBarUL li {
   list-style-type: none;
   width: 100%;
 }
-.sideBarUl li a
-{
+
+.sideBarUL li a {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.5;
@@ -140,6 +140,7 @@ pre {
   border-width: 1px 0px 1px 1px;
   border-color: transparent currentcolor transparent transparent;
 }
+
 .rightSideTitle {
   font-size: 10px;
   line-height: 1;
@@ -151,36 +152,37 @@ pre {
   border-left-color: rgb(230, 236, 241);
   color: #9DAAB6;
 }
-.rightSideBarUl
-{
+
+.rightSideBarUL {
   margin-top: 32px;
 }
-.rightSideBarUl li
-{
+
+.rightSideBarUL li {
   list-style-type: none;
   border-left: 1px solid #e6ecf1;
   border-left-color: rgb(230, 236, 241);
 }
-.rightSideBarUl li a {
+
+.rightSideBarUL li a {
   font-size: 12px;
   font-weight: 500;
   line-height: 1.5;
   padding: 7px 24px 7px 16px;
 }
-.subLevel
-{
+
+.subLevel {
   margin-left: 16px;
   border-left: 1px solid #e6ecf1;
   border-left-color: rgb(230, 236, 241);
   padding: 7px 24px 7px 16px;
   width: calc(100% - 16px) !important;
 }
-.subLevel:hover
-{
+
+.subLevel:hover {
   background-color: #542683;
 }
-.subLevel a
-{
+
+.subLevel a {
   line-height: 1.5;
   color: #fff;
   font-size: 14px;
@@ -189,28 +191,28 @@ pre {
   padding: 0 0 !important;
   display: block;
 }
-.subLevel.active
-{
+
+.subLevel.active {
   color: rgb(116, 76, 188);
   border-color: rgb(230,236,241) !important;
   border-style: solid none solid solid;
   border-width: 1px 0px 1px 1px;
   background-color: #fff;
 }
-.subLevel.active a
-{
+
+.subLevel.active a {
   color: rgb(116, 76, 188);
 }
-.titleWrapper
-{
+
+.titleWrapper {
   display: flex;
   align-items: center;
   padding-bottom: 40px;
   border-bottom: 1px solid rgb(230, 236, 241);
   margin-bottom: 32px;
 }
-.title
-{
+
+.title {
   font-size: 32px;
   line-height: 1.5;
   font-weight: 500;
@@ -220,24 +222,25 @@ pre {
   margin-top: 0;
   padding-top: 0;
 }
-.gitBtn
-{
+
+.gitBtn {
   height: 30px;
   min-height: 30px;
   display: flex;
   align-items: center;
 }
+
 .gitBtn img {
   width: 15px;
   display: inline-block;
   margin-right: 5px;
 }
-.addPaddTopBottom
-{
+
+.addPaddTopBottom {
   padding: 50px 0;
 }
-.nextPreviousWrapper
-{
+
+.nextPreviousWrapper {
   margin: 0px;
   padding: 0px;
   width: auto;
@@ -247,8 +250,7 @@ pre {
   grid-template-columns: calc(50% - 8px) calc(50% - 8px);
 }
 
-.previousBtn
-{
+.previousBtn {
   cursor: pointer;
   -moz-box-align: center;
   -moz-box-direction: normal;
@@ -268,8 +270,8 @@ pre {
   box-shadow: rgba(116, 129, 141, 0.1) 0px 3px 8px 0px;
   text-decoration: none;
 }
-.leftArrow
-{
+
+.leftArrow {
   display: block;
   margin: 0px;
   color: rgb(157, 170, 182);
@@ -279,42 +281,42 @@ pre {
   padding: 16px;
   padding-right: 16px;
 }
-.prerightWrapper
-{
+
+.preRightWrapper {
   display: block;
   margin: 0px;
   flex: 1 1 0%;
   padding: 16px;
   text-align: right;
 }
-.smallContent
-{
+
+.smallContent {
   display: block;
   margin: 0px;
   padding: 0px;
   color: rgb(157, 170, 182);
 }
-.smallContent span
-{
+
+.smallContent span {
   font-size: 12px;
   line-height: 1.625;
   font-weight: 400;
 }
-.nextPrevioutitle
-{
+
+.nextPreviousTitle {
   display: block;
   margin: 0px;
   padding: 0px;
   transition: color 200ms ease 0s;
 }
-.nextPrevioutitle span
-{
+
+.nextPreviousTitle span {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 500;
 }
-.nextBtn
-{
+
+.nextBtn {
   cursor: pointer;
   -moz-box-align: center;
   -moz-box-direction: normal;
@@ -334,8 +336,8 @@ pre {
   box-shadow: rgba(116, 129, 141, 0.1) 0px 3px 8px 0px;
   text-decoration: none;
 }
-.rightArrow
-{
+
+.rightArrow {
   flex: 0 0 auto;
   font-size: 24px;
   transition: color 200ms ease 0s;
@@ -345,51 +347,56 @@ pre {
   margin: 0px;
   color: rgb(157, 170, 182);
 }
-.nextrightWrapper
-{
+
+.nextRightWrapper {
   display: block;
   margin: 0px;
   padding: 16px;
   flex: 1 1 0%;
 }
-.nextBtn:hover, .previousBtn:hover
-{
+
+.nextBtn:hover, .previousBtn:hover {
   color: rgb(116, 76, 188);
   text-decoration: none;
   border: 1px solid rgb(116, 76, 188);
 }
-.nextBtn:hover .rightArrow, .previousBtn:hover .leftArrow
-{
+
+.nextBtn:hover .rightArrow, .previousBtn:hover .leftArrow {
   color: rgb(116, 76, 188);
 }
 
 /* tables.css */
 table {
 padding: 0; }
+
 table tr {
   border-top: 1px solid #cccccc;
   background-color: white;
   margin: 0;
 padding: 0; }
+
 table tr:nth-child(2n) {
   background-color: #f8f8f8; }
+
 table tr th {
   font-weight: bold;
   border: 1px solid #cccccc;
   text-align: left;
   margin: 0;
 padding: 6px 13px; }
+
 table tr td {
   border: 1px solid #cccccc;
   text-align: left;
   margin: 0;
 padding: 6px 13px; }
+
 table tr th :first-child, table tr td :first-child {
 margin-top: 0; }
+
 table tr th :last-child, table tr td :last-child {
 margin-bottom: 0; }
 /* end - tables.css */
-
 
 /* Image styling */
 img {
@@ -397,67 +404,65 @@ img {
 }
 /* end image */
 
-@media (max-width: 767px)
-{
-  hr
-  {
+@media (max-width: 767px) {
+  hr {
     margin-top: 0;
     margin-bottom: 0;
   }
-  .navbar-collapse
-  {
+
+  .navbar-collapse {
     padding-left: 0;
     padding-right: 0;
   }
-  .navBarUl
-  {
+
+  .navBarUL {
     padding-left: 16px;
   }
-  .navBarUl li a
-  {
+
+  .navBarUL li a {
     font-size: 14px;
   }
-  .navBarDefault
-  {
+
+  .navBarDefault {
     display: block;
   }
-  .navBarToggle
-  {
+
+  .navBarToggle {
     margin-top: 15px;
   }
-  .navBarBrand
-  {
+
+  .navBarBrand {
     font-size: 20px;
     padding: 15px
   }
-  .titleWrapper
-  {
+
+  .titleWrapper {
     padding: 0 15px;
     display: block;
   }
-  .mobileView
-  {
+
+  .mobileView {
     text-align: center !important;
   }
-  .gitBtn
-  {
+
+  .gitBtn {
     display: inline-block;
   }
-  .mainWrapper
-  {
+
+  .mainWrapper {
     padding: 0 15px;
   }
-  .nextPreviousWrapper
-  {
+
+  .nextPreviousWrapper {
     display: block;
     padding: 0 15px;
   }
-  .previousBtn
-  {
+
+  .previousBtn {
     margin-bottom: 20px;
   }
-  .mobileView
-  {
+
+  .mobileView {
     text-align: left !important;
     padding-left: 0 !important;
   }
