UI tweaks, filter functions with untracked setof table

--- a/console/src/components/Services/Data/Function/Modify/ModifyCustomFunction.scss
+++ b/console/src/components/Services/Data/Function/Modify/ModifyCustomFunction.scss
@@ -17,6 +17,9 @@
       margin-right: 20px;
       color: #FFF;
     }
+    .no_mr_right {
+      margin-right: 0px;
+    }
     .white_button {
       margin-right: 20px;
       color: #333;
