--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -86,6 +86,7 @@ table thead tr th
         padding: 15px 0px;
         padding-left: 20px;
         background-color: #FFF3D5;
+        display: inline-block;
       }
     }
    }
