add css property to completely show column values (close #1246) (#1337)

--- a/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
+++ b/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
@@ -65,6 +65,7 @@
 
 .ReactTable .rt-tbody {
   overflow-x: hidden !important;
+  min-width: fit-content !important;
 }
 
 .ReactTable .rt-thead [role='columnheader'] {
