--- a/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
+++ b/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
@@ -1,3 +1,7 @@
+.ReactTable
+{
+  border: 0;
+}
 .ReactTable .-pagination .-btn {
   height: 35px !important;
   width: 40%;
@@ -53,12 +57,14 @@
 .ReactTable .rt-table .rt-tbody
 {
   margin-bottom: 10px;
+  border: solid 1px rgba(0,0,0,0.05);
 }
 
 .ReactTable .rt-tbody .rt-tr-group:last-child
 {
-  border-bottom: solid 1px rgba(0,0,0,0.05);
+    border-bottom: solid 1px rgba(0,0,0,0.05);
 }
+
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even:hover {
   background-color: #ebf7de;
 }
