--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -14,6 +14,22 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6
   font-size: 40px;
   text-align: center;
 }
+input::-moz-focus-inner {
+ outline: 0;
+ -moz-outline: none;
+ border:0;
+}
+select:-moz-focusring
+{
+  color: transparent;
+  text-shadow: 0 0 0 #000;
+}
+select::-moz-focus-inner {
+ outline: 0;
+ -moz-outline: none;
+ border: 0;
+}
+option::-moz-focus-inner { border: 0; outline: 0 }
 table thead tr th
 {
   background-color: #F2F2F2 !important;
