--- a/docs/_static/hasura-custom.css
+++ b/docs/_static/hasura-custom.css
@@ -487,6 +487,18 @@ article ol ol {
   text-align: center;
   background-color: #eee;
   margin: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-hasura-custom .footer_logo {
+  width: 100px;
+  margin-right: 30px;
+}
+
+.footer-hasura-custom .footer_text {
+ display: inline-block;
 }
 
 /*** Footer END ***/
