--- a/server/src-rsr/trigger.sql.j2
+++ b/server/src-rsr/trigger.sql.j2
@@ -7,8 +7,20 @@ CREATE OR REPLACE function hdb_views.{{QUALIFIED_TRIGGER_NAME}}() RETURNS trigge
    _new record;
    _data json;
    payload json;
+   session_variables json;
+   server_version_num int;
    BEGIN
      id := gen_random_uuid();
+     server_version_num := current_setting('server_version_num');
+     IF server_version_num >= 90600 THEN
+       session_variables := current_setting('hasura.user', 't');
+     ELSE
+        BEGIN
+          session_variables := current_setting('hasura.user');
+        EXCEPTION WHEN OTHERS THEN
+            session_variables := NULL;
+        END;
+     END IF;
      IF TG_OP = 'UPDATE' THEN
        _old := {{OLD_ROW}};
        _new := {{NEW_ROW}};
@@ -23,7 +35,8 @@ CREATE OR REPLACE function hdb_views.{{QUALIFIED_TRIGGER_NAME}}() RETURNS trigge
      );
      payload := json_build_object(
                         'op', TG_OP,
-                        'data', _data
+                        'data', _data,
+                        'session_variables', session_variables
                         )::text;
      IF (TG_OP <> 'UPDATE') OR (_old <> _new) THEN
        INSERT INTO
