--- a/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
+++ b/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
@@ -58,8 +58,14 @@
 {
   margin-bottom: 10px;
   border: solid 1px rgba(0,0,0,0.05);
+  min-width: fit-content !important;
+  min-width: -moz-fit-content !important;
+  min-width: -webkit-fit-content !important;
+  min-width: -o-fit-content !important;
 }
-
+.ReactTable .rt-table .rt-thead {
+  /* min-width: 1150px !important; */
+}
 .ReactTable .rt-tbody .rt-tr-group:last-child
 {
     border-bottom: solid 1px rgba(0,0,0,0.05);
@@ -69,7 +75,7 @@
   background-color: #ebf7de;
 }
 
-.ReactTable .rt-tbody {
+.ReactTable .rt-table .rt-tbody {
   overflow-x: hidden !important;
   min-width: fit-content !important;
 }
