--- a/console/src/components/Services/EventTrigger/TableCommon/Table.scss
+++ b/console/src/components/Services/EventTrigger/TableCommon/Table.scss
@@ -213,19 +213,19 @@ a.expanded {
     margin-bottom: 10px;
   }
   margin-bottom: 10px;
-  label {
-    cursor: pointer;
-  }
 }
 
 .retryLabel {
   display: block;
-  margin-bottom: 10px !important;
 }
 
 .retrySection {
-  width: 300px;
   margin-right: 20px;
+  width: 100%;
+  float: left;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .invocationsSection {
@@ -349,4 +349,8 @@ a.expanded {
   i:hover {
     color: #4D4D4D ;
   }
+}
+
+.width300 {
+  width: 300px;
 }
