--- a/docs/_static/hasura-custom.css
+++ b/docs/_static/hasura-custom.css
@@ -131,6 +131,8 @@ ul {
   -webkit-box-shadow: -1px 2px 20px 2px rgba(217,217,217,1);
   -moz-box-shadow: -1px 2px 20px 2px rgba(217,217,217,1);
   box-shadow: -1px 2px 20px 2px rgba(217,217,217,1);
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 #docs-content img.no-shadow {
