--- a/console/src/components/ApiExplorer/ApiExplorer.scss
+++ b/console/src/components/ApiExplorer/ApiExplorer.scss
@@ -260,7 +260,7 @@
     float: right;
     display: inline-block;
   }
-  .showAdminSecret{
+  .showAccessKey{
     cursor: pointer;
     padding-top: 8px;
     padding-right: 8px;
