--- a/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
+++ b/console/src/components/Services/Data/TableBrowseRows/ReactTableFix.css
@@ -1,5 +1,4 @@
-.ReactTable
-{
+.ReactTable {
   border: 0;
 }
 .ReactTable .-pagination .-btn {
@@ -56,7 +55,7 @@
 
 .ReactTable .rt-table .rt-tbody {
   margin-bottom: 10px;
-  border: solid 1px rgba(0,0,0,0.05);
+  border: solid 1px rgba(0, 0, 0, 0.05);
   min-width: fit-content !important;
   min-width: -moz-fit-content !important;
   min-width: -webkit-fit-content !important;
@@ -71,7 +70,7 @@
   border-left: solid 1px #f2f2f2;
 }
 .ReactTable .rt-tbody .rt-tr-group:last-child {
-    border-bottom: solid 1px rgba(0,0,0,0.05);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.05);
 }
 
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even:hover {
