--- a/console/src/components/Common/Layout/LeftNavBar/LeftNavBar.scss
+++ b/console/src/components/Common/Layout/LeftNavBar/LeftNavBar.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
-@import "../../../Common/Common.scss";
+@import "../../Common.scss";
 .container {
 }
 .displayFlexContainer
