Schema and event triggers page update

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -504,6 +504,10 @@ input {
 {
   margin-left: 20px;
 }
+.add_mar_left_small
+{
+  margin-left: 5px;
+}
 .add_mar_small
 {
   margin-right: 10px !important;
@@ -553,6 +557,10 @@ code
 .add_pad_bottom
 {
   padding-bottom: 20px;
+}
+.add_pad_top
+{
+  padding-top: 10px;
 }
 .add_padd_bottom
 {
