update console browse rows section

--- a/console/src/components/Services/Data/TableCommon/Table.scss
+++ b/console/src/components/Services/Data/TableCommon/Table.scss
@@ -53,19 +53,12 @@
   border-left: 1px solid #ddd;
 }
 
-.cellExpand {
-  transform: rotate(-45deg);
+.cellExpander {
   cursor: pointer;
   top: -5px;
   left: 0px;
   right: 0px;
-}
-
-.cellCollapse {
-  cursor: pointer;
-  top: -5px;
-  left: 0px;
-  right: 0px;
+  font-size: 12px;
   padding-right: 5px;
 }
 
@@ -195,8 +188,7 @@ a.expanded {
   text-align: center;
 }
 
-.tableCellCenterAlignedExpanded {
-  text-align: center;
+.tableCellExpanded {
   white-space: normal;
 }
 
