--- a/console/src/components/Services/EventTrigger/PageContainer/PageContainer.scss
+++ b/console/src/components/Services/EventTrigger/PageContainer/PageContainer.scss
@@ -118,6 +118,7 @@
   overflow: auto;
   padding-left: 20px;
   max-height: calc(100vh - 275px);
+  border-bottom: 1px solid #e6e6e6;
 }
 .schemaListUl {
   padding-left: 5px;
