remove sidebar link underline

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -70,7 +70,7 @@ table thead tr th
       a
       {
         color: #767E93;
-        border-bottom: 1px solid #E6E6E6;
+        //border-bottom: 1px solid #E6E6E6;
         background-color: #f0f0f0;
         width: 100%;
         word-wrap: break-word;
