Remote schema page WIP

--- a/console/src/components/Common/Common.scss
+++ b/console/src/components/Common/Common.scss
@@ -598,7 +598,8 @@ code
     background-color: #59A21C;
     border: 1px solid #539719;
     color: #fff;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: 600;
   }
   button:focus
   {
@@ -613,7 +614,8 @@ code
     background-color: #AC2925;
     border: 1px solid #761c19;
     color: #fff;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: 600;
   }
   button:focus
   {
@@ -628,7 +630,8 @@ code
     background-color: #E6E6E6;
     border: 1px solid #D7D7D7;
     color: #000;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: 600;
   }
   button:focus
   {
@@ -643,7 +646,8 @@ code
     background-color: #59A21C;
     border: 1px solid #539719;
     color: #fff;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: 600;
   }
   button:focus
   {
@@ -658,7 +662,8 @@ code
     background-color: #AC2925;
     border: 1px solid #761c19;
     color: #fff;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: 600;
   }
   button:focus
   {
@@ -673,7 +678,8 @@ code
     background-color: #E6E6E6;
     border: 1px solid #D7D7D7;
     color: #000;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: 600;
   }
   button:focus
   {
@@ -746,7 +752,8 @@ code
   color: #606060;
   border: 1px solid #FEC53D;
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 13px;
+  font-weight: 600;
   line-height: 1.5;
   &:hover {
     background-color: #F2B130;
@@ -755,7 +762,8 @@ code
 .yellow_button1
 {
   padding: 5px 10px !important;
-  font-size: 12px !important;
+  font-size: 13px !important;
+  font-weight: 600 !important;
   line-height: 1.5;
 }
 .yellow_button:focus
@@ -770,8 +778,11 @@ code
   color: #292929;
   border: 1px solid #292929;
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 13px;
+  font-weight: 600;
   line-height: 1.5;
+  display: flex;
+  align-items: center;
   &:hover {
     background-color: #efefef;
   }
@@ -788,7 +799,8 @@ code
   color: #000;
   border: 1px solid #c9302c;
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 13px;
+  font-weight: 600;
   line-height: 1.5;
 }
 .danger_button:focus
@@ -802,7 +814,8 @@ code
   color: #000;
   border: 1px solid #FEC53D;
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 13px;
+  font-weight: 600;
   line-height: 1.5;
   &:hover {
     background-color: #F2B130;
@@ -821,7 +834,8 @@ code
   background-color: #fff;
   border-radius: 5px;
   color: #292929;
-  font-size: 12px;
+  font-size: 13px;
+  font-weight: 600;
   border: 1px solid #292929;
   margin-right: 15px;
   padding: 5px 10px;
@@ -863,6 +877,44 @@ code
     margin-right: 0 !important;
   }
 }
+/*Newly added for remote schema page*/
+.headerText
+{
+  font-size: 24px;
+  font-weight: bold;
+  padding-bottom: 20px;
+}
+.addPaddRight
+{
+  padding-right: 30px;
+}
+.subHeaderText
+{
+  font-size: 18px;
+  font-weight: 600;
+  display: flex;
+  img
+  {
+    display: inline-block;
+    width: 8px;
+    margin-right: 12px;
+  }
+}
+.descriptionText
+{
+  font-size: 15px;
+  line-height: 1.2;
+}
+.fontWeightBold
+{
+  font-weight: 600;
+}
+.noPadd
+{
+  padding-left: 0;
+  padding-right: 0;
+}
+/*Newly added for remote schema page*/
 .heading_text
 {
   font-size: 18px;
@@ -889,7 +941,8 @@ code
     padding: 3px 8px;
     background-color: #27AE60;
     border: 1px solid #27AE60;
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: 600;
     color: #fff;
     border-radius: 5px;
 
