--- a/console/src/components/Services/CustomResolver/Styles.scss
+++ b/console/src/components/Services/CustomResolver/Styles.scss
@@ -185,6 +185,7 @@
   font-size: 15px;
   font-weight: 600;
   margin-top: 20px;
+  position: relative;
   cursor: pointer;
   img
   {
@@ -193,17 +194,10 @@
     margin-left: 12px;
   }
 }
-.yellowCircle
-{
-  border-radius: 50%;
-  width: 10px;
-  height: 10px;
-  background-color: #f8c533;
-  margin-right: 10px;
-}
+
 .tryOutWrapper
 {
-  padding-top: 30px;
+  padding: 30px 0;
   display: flex;
   align-items: flex-start;
   .boxLarge
